[package]
name = "rex"
version = "0.1.0"
authors = [
    "Christopher Breeden <github@u.breeden.cc>",
    "Sebastian Köln <sebk@rynx.org>"
]

[dependencies]
lazy_static = "0.2"
fnv = "1.0.3"
fp = { git = "https://github.com/ReTeX/fp.git" }
staticmap = { path = "static-map/staticmap" }
staticmap_macros = { path = "static-map/staticmap_macros" }

[dev-dependencies]
toml = "0.2"
json = "0.11"

[dependencies.log]
version="0.3"
features = [ "release_max_level_warn" ]