[package]
name = "rex"
version = "0.1.0"
authors = [
    "Christopher Breeden <github@u.breeden.cc>",
    "Sebastian Köln <sebk@rynx.org>"
]

[features]
fast-check = []

[[bin]]
name = "qc"
path = "bin/qc.rs"

[dependencies]
fnv = "1.0.3"
fp = { git = "https://github.com/ReTeX/fp.git" }
static_map = "0.1"
static_map_macros = "0.1"

[dev-dependencies]
toml = "0.2"
json = "0.11"

[dependencies.log]
version="0.3"
features = [ "release_max_level_warn" ]